--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<p> Hello world </p>
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>replit</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+
+<div class = "nav-bar"> 
+    <h1> UNIT 1 </h1>
+    <h1> UNIT 2 </h1>
+    <h1> UNIT 3 </h1>
+    <h1> UNIT 4 </h1>
+    <h1> UNIT 5 </h1>
+    <h1> CASES </h1>
+    <h1> DOCS </h1>
+</div>
+
+</body>
+
+</html>
