unit pages - nav bar horizantal

--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 <body>
 
 <div class = "nav-bar"> 
-    <h1> UNIT 1 </h1>
-    <h1> UNIT 2 </h1>
-    <h1> UNIT 3 </h1>
-    <h1> UNIT 4 </h1>
-    <h1> UNIT 5 </h1>
-    <h1> CASES </h1>
-    <h1> DOCS </h1>
+  <ul class = "nav-list">
+    <li> <a href="unitOne.html"> UNIT 1 </a> </li>
+    <li> <a href="unitTwo.html"> UNIT 2 </a> </li>
+    <li> <a href="unitThree.html"> UNIT 3 </a> </li>
+    <li> <a href="unitFour.html"> UNIT 4 </a> </li>
+    <li> <a href="unitFive.html"> UNIT 5 </a> </li>
+    <li> CASES </li>
+    <li> DOCS </li>
+  </ul>
 </div>
 
 </body>
