--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>AP GOV</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-
-<div class = "nav-bar"> 
   <ul>
+    <li> <a href="index.html"> HOME </a> </li>
     <li> <a href="unitOne.html"> UNIT 1 </a> </li>
     <li> <a href="unitTwo.html"> UNIT 2 </a> </li>
     <li> <a href="unitThree.html"> UNIT 3 </a> </li>
@@ -20,8 +19,6 @@
     <li> CASES </li>
     <li> DOCS </li>
   </ul>
-</div>
-
 </body>
 
 </html>
