--- a/docs.html
+++ b/docs.html
@@ -21,4 +21,16 @@
       </ul>
 </body>
 
+<ol>
+    <li> Federalist 10 </li>
+    <li> Brutus 1 </li>
+    <li> Declaration of Indpendence </li>
+    <li> Articles of Confederation </li>
+    <li> Constition </li>
+    <li> Federalist 51 </li>
+    <li> Federalist 70 </li>
+    <li> Federalist 78 </li>
+    <li> Letter from Birmingham Jail </li>
+</ol>
+
 </html>
