--- a/unitFour.html
+++ b/unitFour.html
@@ -16,8 +16,8 @@
     <li class = "nav-item"> <a href="unitThree.html"> UNIT 3 </a> </li>
     <li class = "nav-item"> <a href="unitFour.html"> UNIT 4 </a> </li>
     <li class = "nav-item"> <a href="unitFive.html"> UNIT 5 </a> </li>
-    <li class = "nav-item"> <a href="unitFive.html"> CASES </a> </li>
-    <li class = "nav-item"> <a href="unitFive.html"> DOCS </a> </li>
+    <li class = "nav-item"> <a href="cases.html"> CASES </a> </li>
+    <li class = "nav-item"> <a href="docs.html"> DOCS </a> </li>
   </ul>
 
   <h1> American Political Ideologies and Beliefs </h1>
