--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <li class = "nav-item"> <a href="cases.html"> CASES </a> </li>
     <li class = "nav-item"> <a href="docs.html"> DOCS </a> </li>
   </ul>
+
+  <p> Nav bar class style stuff </p>
 </body>
 
 </html>
