--- a/unitOne.html
+++ b/unitOne.html
@@ -20,6 +20,16 @@
     <li class = "nav-item"> <a href="docs.html"> DOCS </a> </li>
   </ul>
   <h1> Foundations of American Democracy </h1>
+
+  <ul>
+    <li> <a href="unitOnePages/peopleGroups.html"> People/Groups </a> </li>
+    <li> Democratic Ideals </li>
+    <li> Types Of Democracy </li>
+    <li> Foundational Documents </li>
+    <li> How We Got A Constitution </li>
+    <li> Fiscal Federalism </li>
+    <li> Access Points </li>
+  </ul>
 </body>
 
 </html>
