file directory changes

--- a/unitOnePages/peopleGroups.html
+++ b/unitOnePages/peopleGroups.html
@@ -10,14 +10,14 @@
 
 <body>
   <ul class = "nav-list">
-    <li class = "nav-item"> <a href="index.html"> HOME </a> </li>
-    <li class = "nav-item"> <a href="unitOne.html"> UNIT 1 </a> </li>
-    <li class = "nav-item"> <a href="unitTwo.html"> UNIT 2 </a> </li>
-    <li class = "nav-item"> <a href="unitThree.html"> UNIT 3 </a> </li>
-    <li class = "nav-item"> <a href="unitFour.html"> UNIT 4 </a> </li>
-    <li class = "nav-item"> <a href="unitFive.html"> UNIT 5 </a> </li>
-    <li class = "nav-item"> <a href="cases.html"> CASES </a> </li>
-    <li class = "nav-item"> <a href="docs.html"> DOCS </a> </li>
+    <li class = "nav-item"> <a href="../index.html"> HOME </a> </li>
+    <li class = "nav-item"> <a href="../unitOne.html"> UNIT 1 </a> </li>
+    <li class = "nav-item"> <a href="../unitTwo.html"> UNIT 2 </a> </li>
+    <li class = "nav-item"> <a href="../unitThree.html"> UNIT 3 </a> </li>
+    <li class = "nav-item"> <a href="../unitFour.html"> UNIT 4 </a> </li>
+    <li class = "nav-item"> <a href="../unitFive.html"> UNIT 5 </a> </li>
+    <li class = "nav-item"> <a href="../cases.html"> CASES </a> </li>
+    <li class = "nav-item"> <a href="../docs.html"> DOCS </a> </li>
   </ul>
 
   <h1> People/Groups </h1>
@@ -96,7 +96,7 @@
     <li> Believes representatives should be qualified - elite </li>
   </ul>
 
-  <br> <h1> Anti-Federalists </h1>
+  <br> <h2> Anti-Federalists </h2>
   <li> Strong state government </li>
   <li> Smaller units of government serve local needs </li>
   <li> Ratification of constitution only with bill of rights </li>
