--- a/unitOne.html
+++ b/unitOne.html
@@ -23,7 +23,7 @@
 
   <ul>
     <li> <a href="unitOnePages/peopleGroups.html"> People/Groups </a> </li>
-    <li> Democratic Ideals </li>
+    <li> <a href="unitOnePages/democraticIdeals.html"> Democratic Ideals </a> </li>
     <li> Types Of Democracy </li>
     <li> Foundational Documents </li>
     <li> How We Got A Constitution </li>
