added content on unit 1 docs

--- a/docs.html
+++ b/docs.html
@@ -21,6 +21,8 @@
       </ul>
 </body>
 
+<h1> The 9 Foundational Documents </h1>
+
 <ol>
     <li> Federalist 10 </li>
     <li> Brutus 1 </li>
@@ -32,5 +34,83 @@
     <li> Federalist 78 </li>
     <li> Letter from Birmingham Jail </li>
 </ol>
+
+<br> <h2> Declaration of Independence </h2>
+<ul>
+  <li> Popular sovereignty, natural rights, social contract </li>
+  <li> …all men are created equal…. Life liberty pursuit of happiness - Natural rights </li>
+  <li> powers from the consent of the governed - Popular sovereignty/social contract </li>
+  <li> Right to abolish government - social contract </li>
+  <li> Ultimate breakup letter </li>
+  <li> British violated self rule and natural rights </li>
+</ul>
+
+<br> <h2> Brutus 1 </h2>
+<ul> 
+  <li> Anti-Federalists response to the federalist papers </li>
+  <li> Wanted a participatory model to ensure everyone has a voice </li>
+  <li> Feared a large government would take away freedoms and threaten participatory democracy </li>
+  <li> Large government wouldn&apos;t represent the views of the people </li>
+  <li> Citizens of a large government wouldn&apos;t be able to get involved </li>
+  <li> Necessary and proper clause gives unlimited power </li>
+  <li> Factions are inevitable </li>
+</ul>
+
+<br> <h2> Federalist 10 </h2>
+<ul>
+  <li> Part of the federalist papers written by James Madison </li>
+  <li> Madison worried about mischief of factions in a republic </li>
+  <li> Factions = groups of people who believe their interest are more important than other </li>
+  <li> Madison worried about factions opposed to rights of others </li>
+  <li> Too many protections of minorities than majority rule would be abolished </li>
+  <li> Large republic creates many factions which would compete </li>
+  <li> Competition would protect liberty and stop one from gaining control </li>
+  <li> Takes away causes of factions stripes people of their liberties </li>
+  <li> Only way to control factions was to control the effects </li>
+  <li> Separation of powers and federalism protects against any group gaining too much power </li>
+</ul>
+
+<br> <h2> Brutus 1 vs Federalist 10 </h2>
+<ul>
+  <li> Majority rule versus minority rights (regional minorities) </li>
+</ul>
+
+<br> <h2> Federalist 51 </h2>
+<ul>
+  <li> Argued for Separation of Powers and Checks and Balances </li>
+  <li> Government wouldn&apos;t be needed if all men were angels </li>
+  <li> Separation of power guards against tyranny </li>
+  <li> There will be so many differing opinions congress shouldn&apos;t worry about a majority forming </li>
+  <li> Bicameral legislature further separates power </li>
+  <li> Independence in the branches is necessary </li>
+  <li> All branches need power over the other as they will compete and keep others in check </li>
+</ul>
+
+<br> <h2> Articles of Confederation </h2>
+<ul> 
+  <li> Weak federal government strong state government </li>
+  <li> Were afraid of a big central government due to tyranny from the king </li>
+  <li> Only one branch of government (congress) </li>
+  <ul class="indentedList">
+    <li> No president </li>
+    <li> No federal court </li>
+    <li> No power to raise revenue/taxes </li>
+    <li> No power to raise an army </li>
+    <li> No power to pay an army </li>
+    <li> Couldn't regulate commerce or establish national currency </li>
+    <li> Had to have unanimous agreement to change the articles </li>
+    <li> Couldn’t afford to pay foreign loans and debt to revolutionary soldiers </li>
+  </ul>
+</ul>
+
+<br> <h2> Constition </h2>
+<ul>
+  <li> We the people - popular sovereignty </li>
+  <li> Elected representative legislate on behalf of people - elite </li>
+  <li> Freedom of assembly/to join interest groups - pluralist </li>
+  <li> Freedom of speech/press give all a voice - participatory </li>
+  <li> Amendments to expand voting and prohibit discrimination - participatory </li>
+  <li> Separated power and created checks and balances </li>
+</ul>
 
 </html>
