added a class for indented lists

--- a/unitOnePages/democraticIdeals.html
+++ b/unitOnePages/democraticIdeals.html
@@ -81,7 +81,7 @@
   <ul> 
     <li> The ideal of the branches of government having a little bit of power over the other
         In order to check the power of other branches and maintain balance </li>
-        <ul style="list-style: disc;">
+        <ul class="indentedList">
             <li> Congress can check presidential appointees with advice and consent </li>
             <li> Congress can impeach the president house convicts, senate tries </li>
             <li> President can check congress with a veto </li>
