fixed an apostrophe

--- a/docs.html
+++ b/docs.html
@@ -99,7 +99,7 @@
     <li> No power to pay an army </li>
     <li> Couldn't regulate commerce or establish national currency </li>
     <li> Had to have unanimous agreement to change the articles </li>
-    <li> Couldn’t afford to pay foreign loans and debt to revolutionary soldiers </li>
+    <li> Couldn&apos;t afford to pay foreign loans and debt to revolutionary soldiers </li>
   </ul>
 </ul>
 
