Content + Collapsible Sections
Added partway of content for parts of the constitution, up to article III. Also trying out a collapsible section

--- a/docs.html
+++ b/docs.html
@@ -113,4 +113,27 @@
   <li> Separated power and created checks and balances </li>
 </ul>
 
+<button type="button" class="collapsible">Parts of the Constitution</button>
+<div class="content">
+
+<br> <h1> Article I </h1>
+  <ul>
+    <li> Establishes the legislative branch </li>
+    <li> Sets up bicameral legislature </li>
+    <li> Lists enumerated powers </li>
+    <li> Commerce clause </li>
+    <li> Power of impeachment is given to congress </li>
+    <li> The house convicts, the Senate tries with chief justice presiding </li>
+  </ul>
+  
+<br> <h1> Article II </h1>
+  <ul> 
+    <li> Establishes the executive branch and president </li>
+    <li> Gives power of commander in chief to president </li>
+    <li> Can deal with foreign policy </li>
+    <li> Must give state of the union </li>
+  </ul>
+  
+</div> 
+
 </html>
