--- a/docs.html
+++ b/docs.html
@@ -116,7 +116,7 @@
 <button type="button" class="collapsible">Parts of the Constitution</button>
 <div class="content">
 
-<br> <h1> Article I </h1>
+<br> <h2> Article I </h2>
   <ul>
     <li> Establishes the legislative branch </li>
     <li> Sets up bicameral legislature </li>
@@ -126,12 +126,45 @@
     <li> The house convicts, the Senate tries with chief justice presiding </li>
   </ul>
   
-<br> <h1> Article II </h1>
+<br> <h2> Article II </h2>
   <ul> 
     <li> Establishes the executive branch and president </li>
     <li> Gives power of commander in chief to president </li>
     <li> Can deal with foreign policy </li>
     <li> Must give state of the union </li>
+  </ul>
+
+<br> <h2> Article III </h2>
+  <ul>
+    <li> Establishes the judicial branch </li>
+    <li> President appoints supreme court and federal court judges </li>
+  </ul>
+  
+<br> <h2> Article IV </h2>
+  <ul>
+    <li> Relations between states </li>
+    <li> Must be open about laws </li>
+    <li> States must respect other state’s citizens </li>
+    <li> Citizens can’t run to another state to escape justice </li>
+  </ul>
+  
+<br> <h2> Article V </h2>
+  <ul>
+    <li> Amendment process </li>
+    <li> An amendment is proposed by congress or the states at a special convention </li>
+    <li> ⅔ vote is needed for proposal to become official </li>
+    <li> ¾ of state legislatures or state ratifying conventions need to agree to amendment </li>
+  </ul>
+  
+<br> <h2> Article VI </h2>
+  <ul>
+    <li> National supremacy clause </li>
+    <li> Tried to unite states under national law </li>
+  </ul>
+  
+<br> <h2> </h2>
+  <ul>
+    <li> </li>
   </ul>
   
 </div> 
