--- a/docs.html
+++ b/docs.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>AP GOV - DOCS </title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <script src="collapsible.js"></script>
 </head>
 
 <body>
