minor collapsible bug

--- a/docs.html
+++ b/docs.html
@@ -114,7 +114,7 @@
   <li> Separated power and created checks and balances </li>
 </ul>
 
-<button type="button" class="collapsible">Parts of the Constitution</button>
+<button class="collapsible">Parts of the Constitution</button>
 <div class="content">
 
 <br> <h2> Article I </h2>
