Finished Parts of the Constitution

--- a/docs.html
+++ b/docs.html
@@ -19,7 +19,6 @@
         <li class = "nav-item"> <a href="cases.html"> CASES </a> </li>
         <li class = "nav-item"> <a href="docs.html"> DOCS </a> </li>
       </ul>
-</body>
 
 <h1> The 9 Foundational Documents </h1>
 
@@ -114,7 +113,6 @@
 </ul>
 
 <button class="collapsible">Parts of the Constitution</button>
-<script src="collapsible.js"></script>
 <div class="content">
 
 <br> <h2> Article I </h2>
@@ -163,11 +161,64 @@
     <li> Tried to unite states under national law </li>
   </ul>
   
-<br> <h2> </h2>
+<br> <h2> Article VII </h2>
   <ul>
-    <li> </li>
+    <li> Ratification Process </li>
+    <li> 9 out of the 13 states need to approve in order to ratify </li>
   </ul>
   
-</div> 
+<br> <h2> Bill of Rights </h2>
+  <ul>
+    <li> First 10 amendments to the constitution </li>
+    <li> Written by James Madison </li>
+    <li> In more depth in unit 3 </li>
+    <li> Anti-federalist believed this was necessary in order to protect liberty </li>
+    <li> Federalist believed it wouldn’t stop tyranny only limit rights to those listed </li>
+  </ul>
+ 
+<br> <h2> 10th Amendment </h2>
+  <ul>
+    <li> Powers not given to federal government are given to the states </li>
+    <li> Part of the bill of rigts </li>
+    <li> Reconstruction era amendment </li>
+  </ul>
 
+<br> <h2> 14th Amendment </h2>
+  <ul>
+    <li> Applies bill of rights to the states (selective incorporation - UNIT 3) </li>
+    <li> Empowers the federal government to ensure states protect liberties </li>
+  </ul>
+  
+<br> <h2> Full Faith and Credit Clause (Article IV) </h2>
+  <ul>
+    <li> States must honor laws and decisions made in other states </li>
+  </ul>
+  
+<br> <h2> Privileges And Immunities Clause (Article IV) </h2>
+  <ul>
+    <li> States must treat non residents the same as residents </li>
+  </ul>
+  
+<br> <h2> Supremacy Clause (Article VI) </h2>
+  <ul>
+    <li> Placed government action above state authority </li>
+    <li> Affirmed by McCulloch v. Maryland </li>
+  </ul>
+  
+<br> <h2> Commerce Clause (Article I) </h2>
+  <ul>
+    <li> Allows congress to regulate interstate, international, and commerce among native americans </li>
+    <li> Interstate commerce or commerce among states </li>
+  </ul>
+
+<br> <h2> Necessary and Proper/Elastic Clause (Article I) </h2>
+  <ul>
+    <li> Congress can make any law necessary to uphold enumerated powers </li>
+    <li> Used to create national banks and air force </li> 
+  </ul>  
+</div> 
+  
+<script src="collapsible.js"></script>
+  
+</body>
 </html>
