Finished Unit 1 content on Constitution

--- a/docs.html
+++ b/docs.html
@@ -218,6 +218,96 @@
   </ul>  
 </div> 
   
+
+<button class="collapsible"> Constitutional Powers </button>
+<div class="content">
+
+<h1> Types of Constitutional Powers </h1>
+  
+<br> <h2> Enumerated powers </h2>
+  <ul>
+    <li> Power specifically given to the federal government in the constitution </li>
+  </ul>
+
+<br> <h2> Reserved Powers </h2>
+  <ul>
+    <li> Powers given to the states </li>
+    <li> 10th amendment gives all powers not delegated to the federal government to the states </li>
+  </ul>
+
+<br> <h2> Concurrent Powers </h2>
+  <ul>
+    <li> Shared by both federal and state powers </li>
+    <li> Like the power to tax </li>
+  </ul>
+
+<br> <h2> Denied Powers </h2>
+  <ul>
+    <li> Powers denied to the federal government </li>
+    <li> No export tax </li> 
+    <li> Can’t suspend habeas corpus or must have a reason to put someone in jail </li>
+    <li> No bill of attainder - only the judicial branch can charge for a crime </li>
+    <li> Ex post facto - can’t charge someone for something that wasn't illegal when they did it </li>
+    <li> No nobility titles </li>
+  </ul>
+  
+</div>
+  
+
+<button class="collapsible"> Constitutional Process </button>
+<div class="content">
+
+<br> <h2> Shay&apos;s Rebellion </h2>
+  <ul>
+    <li> Congress couldn’t pay revolutionary war veterans </li>
+    <li> These people didn’t have enough money to pay taxes and keep farms </li>
+    <li> Started a rebellion in massachusetts </li>
+    <li> Federal government had no power to deal with the rebellion </li>
+    <li> Governor had to use his own money to fund the militia to stop the rebellion </li>
+  </ul>
+
+<br> <h2> Constitutional Convention </h2>
+  <ul>
+    <li> Grand committee assembled to change the articles of confederation </li>
+    <li> Ended up drafting a new constitution </li>
+  </ul>
+
+<br> <h2> Great Compromise/Connecticut Compromise </h2>
+  <ul>
+    <li> How the people are represented in the new congress </li>
+    <li> Virginia Plan versus New Jersey Plan </li>
+    <li> Virginia Plan had representation by population </li>
+    <li> Big states would have more power </li>
+    <li> New Jersey plan had representation equal with one vote per state </li>
+    <li> Gave small states a disproportionate amount of power </li>
+    <li> Compromise created a bicameral legislature </li>
+    <li> One house represented by population, one house represented equally </li>
+  </ul>
+
+<br> <h2> Electoral College Compromise </h2>
+  <ul>
+    <li> Representatives though citizens couldn’t be trusted to elect their own president </li>
+    <li> Compromise between states electing and citizens electing president </li>
+    <li> Each state has electors equal to the number of congressional representatives </li>
+    <li> State legislatures have the power to divide who these people are </li>
+    <li> A form of elite democracy </li>
+    <li> Gives congress final say on president (election of 1800/corrupt bargain) </li>
+  </ul>
+ 
+<br> <h2> ⅗ compromise </h2>
+  <ul>
+    <li> ⅗ of the enslaved population counted for representation </li>
+    <li> Northern states didn’t want slaves to count at all </li>
+    <li> Southern states wanted all slaves to count </li>
+  </ul>
+
+<br> <h2> Importation of Slaves </h2>
+  <ul>
+    <li> Congress can’t touch the slave trade until 20 years after constitution was ratified </li>
+  </ul>
+ 
+</div>
+
 <script src="collapsible.js"></script>
   
 </body>
